tests/baselines/reference/ambientNameRestrictions.errors.txt
tests/cases/compiler/ambientNameRestrictions.ts(2,14): error TS1214: Identifier expected. 'static' is a reserved word in strict mode. Modules are automatically in strict mode.


==== tests/cases/compiler/ambientNameRestrictions.ts (1 errors) ====
    export declare namespace Foo {
      export var static: any;
                 ~~~~~~
!!! error TS1214: Identifier expected. 'static' is a reserved word in strict mode. Modules are automatically in strict mode.
    }
    